--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-snowfall": "^2.3.0",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
