--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "swiper": "^12.0.3"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20251014.0",
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
