--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-snowfall": "^2.3.0",
+    "styled-component": "^2.8.0",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
