--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-snowfall": "^2.3.0",
-    "styled-component": "^2.8.0",
+    "styled-components": "^6.1.19",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
